<resources>
    <string name="app_name">Propuesta</string>
    <string name="title_carga">Vende articulos de segunda mano</string>
    <string name="dev">Desarrollado por: </string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_profile">Perfil</string>
    <string name="title_profile_details">Perfil</string>
    <string name="Usuario">Usuario</string>
    <string name="Email">Correo</string>
    <string name="Password">Contraseña</string>


    <string name="registrarse">Registrarse</string>
    <string name="registrar_admin">Registrar administrador</string>
    <string name="logout">Cerrar sesión</string>

    <string name="hello_blank_fragment">Hello Blank Fragment</string>

    //fragment_search
    <string name="Inputsearch">Buscar un articulo o categoria</string>
    <string name="categoryClothes">Ropa</string>
    <string name="categoryElectronics">Electrónicos</string>
    <string name="categoryChildren">Niños</string>
    <string name="categoryHome">Hogar</string>

    //fragment_home
    <string name="title_home_category">Artículos populares</string>
    <string name="title_home_buy">Comprar por marcas</string>
    <string name="title_home_sell">Mas vendidos</string>
    <string name="price">$ 600</string>
    <string name="quantity">16</string>
    <string name="size">Talla: 8</string>
    <string name="brand">Converse</string>
    <string name="brand2">Nike</string>
    <string name="brand3">Adidas</string>

    //fragment_profile
    <string name="title_profile_articles">Mis articulos</string>
    <string name="username">Luisa</string>
    <string name="description">Hola! Aquí se vende</string>

    //activity_main_admin
    <string name="title_admin_add">Registrar</string>
    <string name="title_admin_home">Inicio Admin</string>
    <string name="title_admin_add_user">Registrar Usuarios</string>
    <string name="title_profile_admin">Perfil Admin</string>

    //inicioAdmin
    <string name="fotos">Fotos</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoria</string>
    <string name="marca">Marca</string>
    <string name="addImage">+ Añadir</string>
    <string name="addArticle">Añadir articulo</string>



</resources>