<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"

    app:startDestination="@+id/navigation_home_admin">

    <fragment
        android:id="@+id/navigation_home_admin"
        android:name="com.example.propuesta.adminUi.Home_admin"
        android:label="@string/title_admin_home"
        tools:layout="@layout/fragment_home_admin" />
        />
    <fragment
        android:id="@+id/navigation_add_admin"
        android:name="com.example.propuesta.RegistrarAdmin"
        android:label="@string/title_admin_add_user"
        tools:layout="@layout/fragment_registrarse"
        />
    <fragment
        android:id="@+id/navigation_profile_admin"
        android:name="com.example.propuesta.ProfileDetails"
        android:label="@string/title_profile_admin"
        tools:layout="@layout/fragment_profile_details"
        />

</navigation>