<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginTop="80dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textSize="35dp"
            android:textColorHighlight="@color/black"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:hint="@string/Usuario"
            android:layout_marginTop="60dp"
            android:inputType="text"
            android:id="@+id/Usuario"
            android:background="@drawable/button_border" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:hint="@string/Email"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:id="@+id/Email"
            android:background="@drawable/button_border"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:id="@+id/Password"
                android:background="@drawable/button_border"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:id="@+id/btn_registrarse"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>