<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fotos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:columnCount="3"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="145dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_border"
                    android:text="@string/addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="145dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_border"
                    android:text="@string/addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="145dp"
                    android:background="@drawable/button_border"
                    android:text="@string/addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </GridLayout>

              </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="Nombra tu articulo"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="text"
                android:id="@+id/article"
                android:background="@drawable/button_border"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="Describe tu artículo"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="text"
                android:id="@+id/description"
                android:background="@drawable/button_border"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="Nombra tu marca"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="text"
                android:id="@+id/brandtext"
                android:background="@drawable/button_border"
                />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addArticle"
            android:id="@+id/btn_addArticle"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_rounded"
            />
    </LinearLayout>
</ScrollView>